<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_arm_remote_client</name>
  <version>0.0.1</version>
  <description>PySide6 ROS 2 remote control client for rc_arm_2.</description>
  <maintainer email="codex@openai.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-pyside6.qtcore</exec_depend>
  <exec_depend>python3-pyside6.qtgui</exec_depend>
  <exec_depend>python3-pyside6.qtwidgets</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
